examples/test/testpolicy17752.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17752
  namespace: namespace119
spec:
  podSelector:
    matchLabels:
      key10: value23
      key34: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value31
          key5: value39
          key28: value18
      podSelector:
        matchLabels:
          key3: value27
          key27: value9
